--- a/Assignment 2/CS5691_student_version.ipynb
+++ b/Assignment 2/CS5691_student_version.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "id": "U2idb_9Tbj6i"
    },
@@ -101,15 +101,19 @@
     "    \n",
     "    # Finding eigenvalues and eigenvectors\n",
     "    \n",
-    "    w, v = np.linalg.eig(S)\n",
+    "    w, v = np.linalg.eig(S) # w is the array of eigenvalues, and the columns of v are the corresponding eigenvectors\n",
     "    \n",
     "    # Transforming the data to a lower dimension space\n",
     "    \n",
-    "    X_transformed = np.matmul(v[:, :m_dim].T, X)\n",
+    "    Z = np.zeros((m_dim, X.shape[1])) # Z contains the coefficients of the Principal Components\n",
+    "    b = np.zeros((m_dim, 1)) # Bias term\n",
     "    \n",
-    "    dataset_pca = X_transformed.T\n",
+    "    for i in range(X.shape[1]):\n",
+    "        Z[:, i] = np.matmul(X[:, i].T, v[:,:m_dim]).T\n",
+    "        \n",
+    "    b = np.matmul(x_bar.T, v[:, m_dim:]).T\n",
     "    \n",
-    "    return dataset_pca, v,\n",
+    "    return Z, b, v\n",
     "\n",
     "def Kmeans(dataset, k):\n",
     "    \"\"\"\" Implements K-Means Clustering on the provided dataset\n",
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "id": "03-5tY9-2YOc"
    },
@@ -153,10 +157,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x24cc47c5160>]"
+       "[<matplotlib.lines.Line2D at 0x1f908be8820>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -184,13 +188,14 @@
     "x_bar = np.mean(X, axis = 1)\n",
     "S = (1/X.shape[1])*np.matmul(X-x_bar[:, np.newaxis], (X-x_bar[:, np.newaxis]).T)\n",
     "variance = []\n",
-    "dataset_pca, v= PCA(dataset, 1)\n",
+    "Z, b, v= PCA(dataset, 1)\n",
+    "\n",
     "for i in range(dataset.shape[1]):\n",
     "    variance.append(np.matmul(v[:, i].T, np.matmul(S, v[:, i])))\n",
     "variance = np.array(variance)    \n",
     "normalized_variance = 100*(variance/np.sum(variance))\n",
     "cum_variance = np.cumsum(normalized_variance)\n",
-    "plt.plot(np.arange(cum_variance.shape[0]), cum_variance, 'ro')"
+    "plt.plot(np.arange(cum_variance.shape[0]), cum_variance, 'ro')\n"
    ]
   },
   {
