--- a/Assignment 2/CS5691_student_version.ipynb
+++ b/Assignment 2/CS5691_student_version.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "id": "U2idb_9Tbj6i"
    },
@@ -137,15 +137,9 @@
     "    for i in range(iterations):\n",
     "        \n",
     "        for l in range(X.shape[1]):\n",
-    "            x = X[:, l][:, np.newaxis]\n",
-    "            cluster = 0\n",
-    "            distance = np.linalg.norm(x-mean_vectors[:, 0])\n",
-    "            for m in range(1, k):\n",
-    "                new_distance = np.linalg.norm(x-mean_vectors[:, m])\n",
-    "                if new_distance > distance:\n",
-    "                    cluster = m\n",
-    "                distance = new_distance\n",
-    "                \n",
+    "            x = X[:, l]\n",
+    "            distances = np.array([np.linalg.norm(x-mean_vectors[:,f]) for f in range(k)])\n",
+    "            cluster = np.argmin(distances)\n",
     "            r = np.zeros((1, k))\n",
     "            r[0, cluster] = 1\n",
     "            R[l, :] = r\n",
@@ -188,7 +182,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f8a7ef4250>]"
+       "[<matplotlib.lines.Line2D at 0x1d9a1db42e0>]"
       ]
      },
      "execution_count": 5,
@@ -241,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "-imwHLynsTee"
    },
