--- a/Assignment 2/Untitled.ipynb
+++ b/Assignment 2/Untitled.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "R = np.zeros((dataset.shape[0], k)) # Rows of R are the responsibility vectors for each datapoint\n",
     "mean_vectors = X[:, :k] # Columns are the mean vectors of each cluster\n",
     "    \n",
-    "iterations = 100\n",
+    "iterations = 20\n",
     "    \n",
     "for i in range(iterations):\n",
     "        \n",
     "    for l in range(X.shape[1]):\n",
-    "        x = X[:, l][:, np.newaxis]\n",
+    "        x = X[:, l]\n",
     "        distances = np.array([np.linalg.norm(x-mean_vectors[:,f]) for f in range(k)])\n",
     "        cluster = np.argmin(distances)   \n",
     "        r = np.zeros((1, k))\n",
@@ -43,12 +43,12 @@
     "        R[l, :] = r\n",
     "            \n",
     "    for l in range(mean_vectors.shape[1]):\n",
-    "        mean_vectors[:, l] = np.matmul(X, R[:, l])/(np.sum(R[:, l]))"
+    "        mean_vectors[:, l] = (np.matmul(X, R[:, l]))/(np.sum(R[:, l]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "       [0., 1.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "array([[3, 6]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
